- fixed bug with uploaded image files having distorted aspect ratios on resizing - added options page to adjust size of emoticons

--- a/makeembigger.css
+++ b/makeembigger.css
@@ -1,8 +1,4 @@
-/*@media 
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi) {*/
-	.remoticon {
-		height: 64px !important;
-		width: auto;
-	}
-/*}*/
+/*.remoticon {
+	height: 64px !important;
+	width: auto;
+}*/
